--- a/project/package.json
+++ b/project/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "^3.0.5",
+    "@testing-library/dom": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^11.2.0",
     "@testing-library/react-hooks": "^7.0.2",
